# flutter_bluetooth_classic_serial

./: GEMINI.md  pubspec.yaml
android/: build.gradle
android/src/main/kotlin/com/example/flutter_bluetooth_classic/: FlutterBluetoothClassicPlugin.kt
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
ios/: DEPENDENCY_SETUP.md  DEPENDENCY_SETUP_HE.md  ENTITLEMENTS_SETUP.md  README_CHANGES.md  SETUP_INSTRUCTIONS_HE.md  flutter_bluetooth_classic_serial.podspec
ios/Classes/: SwiftFlutterBluetoothClassicPlugin.swift
ios/Runner/: Info.plist  Runner.entitlements
lib/: bluetooth_service.dart  flutter_bluetooth_classic.dart  flutter_bluetooth_classic_platform_interface.dart  flutter_bluetooth_classic_web.dart
macos/: flutter_bluetooth_classic_serial.podspec
macos/Classes/: SwiftFlutterBluetoothClassicPlugin.swift
web/: index.html
windows/: CMakeLists.txt  bluetooth_classic_com_transport.cpp  bluetooth_classic_com_transport.h  bluetooth_classic_registry_enum.cpp  bluetooth_classic_registry_enum.h  bluetooth_connection.cpp  bluetooth_connection.h  bluetooth_device_model.h  bluetooth_manager.cpp  bluetooth_manager.h  bluetooth_server.cpp  bluetooth_server.h  flutter_bluetooth_classic_plugin.cpp  flutter_bluetooth_classic_plugin.h
windows/flutter/ephemeral/.plugin_symlinks/: flutter_bluetooth_classic_serial
windows/include/flutter_bluetooth_classic_serial/: flutter_bluetooth_classic_plugin.h  flutter_bluetooth_classic_plugin_c_api.h
